Fixed site-nav being off center

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -211,7 +211,8 @@ table {
 
 .site-nav {
   list-style: none;
-  margin: 28px 0 10px; }
+  margin: 28px 0 10px;
+  padding-left:	0px; }
 
 .site-nav-item {
   display: inline-block;
